--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.4",
     "vite": "^2.9.9",
-    "vite-plugin-solid": "^2.2.6"
+    "vite-plugin-solid": "^2.2.6",
+    "zod": "^3.17.3"
   },
   "dependencies": {
     "@trpc/client": "^9.23.6",
