--- a/package.json
+++ b/package.json
@@ -8,21 +8,22 @@
     "serve": "vite preview"
   },
   "license": "MIT",
+  "dependencies": {
+    "@trpc/client": "^9.23.6",
+    "solid-js": "^1.4.2"
+  },
   "devDependencies": {
     "@trpc/next": "^9.23.6",
     "@trpc/server": "^9.23.6",
     "@vercel/node": "^1.15.3",
     "autoprefixer": "^10.4.7",
     "install": "^0.13.0",
+    "mongodb": "^4.7.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.4",
     "vite": "^2.9.9",
     "vite-plugin-solid": "^2.2.6",
     "zod": "^3.17.3"
-  },
-  "dependencies": {
-    "@trpc/client": "^9.23.6",
-    "solid-js": "^1.4.2"
   }
 }
